# cvm

./: .gitignore  LICENSE  README.md
cvm.c/: build.sh
cvm.c/core/: base.c  base.h  cvm.h  cvm_base.c  map.c  map.h  panic.c  panic.h  vm_def.h
cvm.c/fullvm/: Storage.h  fullvm.h  main.c  videoMode.c
cvm.c/fullvm/firmwares/pico/sfi/: CMakeLists.txt  main.c  sfi.h
cvm.c/fullvm/generic/: RLEImage.c
cvm.c/fullvm/headers/: RLEImage.h  Storage.h  Video.h
cvm.c/fullvm/headers/Filesystems/: sfs.h
cvm.c/fullvm/pc/: CMakeLists.txt  main.c  pc_impl.h
cvm.c/fullvm/pc/configurations/raylib/: CMakeLists.txt
cvm.c/fullvm/pc/configurations/sdl1/: build.sh
cvm.c/fullvm/pc/storage/: Storage.h
cvm.c/fullvm/pc/video/: videoMode.c
cvm.c/fullvm/pc/video/raylib/: videoMode.c
cvm.c/fullvm/pc/video/sdl1/: videoMode.c
cvm.c/fullvm/pc/win32/: minimal_posix.c  minimal_posix.h
cvm.c/fullvm/pico/: CMakeLists.txt  base.c  cvm.c
cvm.c/fullvm/pico/storage/: sdcard.h  storage.h
cvm.c/fullvm/pico/video/: video.h
cvm.c/fullvm/pico/video/ssd1306/: video.c
cvm.c/fullvm/storage/: Storage.h  cvmdisk.c
cvm.c/fullvm/video/: videoMode.c
cvm.c/impl/: fullvm.h
cvm.c/impl/generic/: base.c
cvm.c/impl/pc/storage/: Storage.h
cvm.c/impl/pc/video/: videoMode.c
cvm.c/impl/pico/: CMakeLists.txt  base.c  cvm.c
cvm.c/minivm/: main.c  minivm.h
cvm.net/: cvm.net.sln
cvm.net/compiler/cvm.net.assembler/: Assembler.cs  AssemblyScanner.cs  AssemlerFunctions.cs  MathAssemlerFunctions.cs  OptionNames.cs  Program.cs  cvm.net.assembler.csproj
cvm.net/compiler/cvm.net.compiler.core/: ArtifactType.cs  AssemblerFunctionDefinition.cs  AssemlerFunctions.cs  CVMObject.cs  CVMObjectContext.cs  Constants.cs  DataConversion.cs  DataProcessMethod.cs  IDataProcessor.cs  ISADefinition.cs  InstructionArgumentUtility.cs  IntermediateInstructions.cs  JumpAssemlerFunctions.cs  LogicAssemlerFunctions.cs  MathAssemlerFunctions.cs  MemoryAssemlerFunctions.cs  RegisterAssemlerFunctions.cs  TypeNames.cs  cvm.net.compiler.core.csproj
cvm.net/compiler/cvm.net.compiler.core/AssemblerFunctions/: IOAssemblerFunctions.cs  JumpAssemlerFunctions.cs  LogicAssemlerFunctions.cs  MathAssemlerFunctions.cs  MemoryAssemlerFunctions.cs  RegisterAssemlerFunctions.cs
cvm.net/compiler/cvm.net.compiler.core/DataProcessors/: Base64Processor.cs  CStringProcessor.cs  HEXProcessor.cs
cvm.net/compiler/cvm.net.compiler.core/Errors/: IncompletInstructionError.cs  UnimplementedInstructionError.cs
cvm.net/compiler/cvm.net.linker/: OptionNames.cs  Program.cs  cvm.net.linker.csproj
cvm.net/compiler/cvm.net.linker.core/: Class1.cs  Linker.cs  cvm.net.linker.core.csproj
cvm.net/core/cvm.net.cli.core/: CLIOptions.cs
cvm.net/core/cvm.net.core/: BaseDataType.cs  CVM.cs  CVMBaseModule.cs  CVMModule.cs  Callframe.cs  CompOP.cs  DumpOptions.cs  ExecuteContext.cs  FlagID.cs  GlobalMemoryPtr.cs  IODefinition.cs  InstID.cs  Instruct.cs  LRCalcOP.cs  Machine.cs  MachineMode.cs  MemoryBlock.cs  MemoryPtr.cs  Ptr.cs  RuntimeModule.cs  RuntimeProgram.cs  SelfCalcOP.cs  cvm.net.core.csproj
cvm.net/core/cvm.net.core.MTDispatcher/: MTDispatcher.cs  cvm.net.core.MTDispatcher.csproj
cvm.net/core/cvm.net.core.SerialDispatcher/: SDispatcher.cs  cvm.net.core.SerialDispatcher.csproj
cvm.net/core/cvm.net.core/CoreCompact/: CompactByte.cs  CompactDouble.cs  CompactInt.cs  CompactLong.cs  CompactSByte.cs  CompactShort.cs  CompactSingle.cs  CompactUInt.cs  CompactULong.cs  CompactUShort.cs  INumbericData.cs
cvm.net/core/cvm.net.core/CoreCompat/: CompactByte.cs  CompactInt.cs  CompactLong.cs  CompactSByte.cs  CompactShort.cs  CompactUInt.cs  CompactULong.cs  INumbericData.cs
cvm.net/core/cvm.net.core/Functions/: CVMFunctions.cs  CVMMathFunctions.cs
cvm.net/core/cvm.net.core/Results/: CVMSimpleResult.cs
cvm.net/core/cvm.net.core/libc/: CString.cs  stdlib.cs
cvm.net/core/cvm.net.core/utils/: StreamUtils.cs  UnsafeConverter.cs  UnsafeDataOperator.cs
cvm.net/core/cvm.net.tools.core/: SegmentTraveler.cs  cvm.net.tools.core.csproj
cvm.net/fullvm/cvm.net.fullvm/: Program.cs  cvm.net.fullvm.csproj
cvm.net/fullvm/cvm.net.fullvm.core/: CLIOptions.cs  DiskDefinitions.cs  DiskImage.cs  DiskPart.cs  Display.cs  IDisk.cs  Operation.cs  OptionNames.cs  PartationMetadata.cs  SimpleFS.cs  cvm.net.fullvm.core.csproj
cvm.net/fullvm/cvm.net.fullvm.core/Data/: UnmanagedVersion.cs
cvm.net/fullvm/cvm.net.fullvm.core/Diagnosis/: DataInspector.cs
cvm.net/fullvm/cvm.net.fullvm.core/Disk/: AbstractFile.cs  DiskDefinitions.cs  DiskImage.cs  DiskPart.cs  FSFuncGroup.cs  FileDescriptor.cs  GPTHeader.cs  GPTPartMgr.cs  IDisk.cs  IFileSystem.cs  PartationMetadata.cs  RootFS.cs  SimpleFS.cs
cvm.net/fullvm/cvm.net.fullvm.core/Disk/FAT32/: FAT32VolumeID.cs
cvm.net/fullvm/cvm.net.fullvm.core/Firmware/: FullVMFirmware.cs
cvm.net/fullvm/cvm.net.fullvm.core/Output/: ConsoleBasedVT.cs  Display.cs  DisplayManager.cs  ITerminal.cs  Terminal.cs  VTCharacter.cs
cvm.net/minivm/cvm.net.minivm/: Program.cs  cvm.net.minivm.csproj
cvm.net/utilities/cvm.net.disk.editor/: DiskEditor.cs  Program.cs  SegmentTraveler.cs  cvm.net.disk.editor.csproj
(+6 files in other folders)
